--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 }
 #ourmenu {
-    background: url(../images/concept.webp);
+    background: url(../images/pizza_fresca.jpg);
     background-size: 100% 100%;
     color:white;
     height: 700px;
