added some background images

--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,9 @@
 .menu {
     text-align: center;
 }
+#menu1 {
+    background: url(../images/dark.jpeg)
+}
+.container2 {
+    text-align: center;
+}
