--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,11 @@
 }
 #menu1 {
     background: url(../images/dark.jpeg);
+    text-align: center;
     background-size: 100% 100%;
-    height: 500px;
-    width: 700%;
+    height: auto;
+    
+    width: 100%;
  
 }
 .container2 {
